[package]
name = "enum_all_variants"
version = "0.1.0"
authors = ["Benjamin Faerber"]
license = "MIT"
edition = "2021"
keywords = ["enum", "macro", "util"]
description = "Generate a list of all enum variants in Rust"
readme = "README.md"
homepage = "https://github.com/benfaerber/enum_all_variants"
repository = "https://github.com/benfaerber/enum_all_variants"

[dependencies]
quote = "1.0.33"
syn = "2.0.38"

[lib]
proc-macro = true
